test/testdata/syntax_errors/unterminated_string.lox
// syntaxerror
// error: unterminated string literal
print "aaaa;
print "this won't be printed";
